# TspGA

./: CMakeLists.txt  main.cpp
TspAlgoBase/: TspAlgoBase.cpp  TspAlgoBase.h
TspAlgoBase/GeneticAlgorithm/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  Path.cpp  Path.h
TspAlgoBase/GeneticAlgorithm/CrossoverStrategies/: CrossoverStrategy.cpp  CrossoverStrategy.h  OrderCrossover.cpp  OrderCrossover.h
TspAlgoBase/GeneticAlgorithm/MutationsStrategies/: InsertMutation.cpp  InsertMutation.h  MutationStrategy.cpp  MutationStrategy.h
TspAlgoBase/GeneticAlgorithm/SelectionStrategies/: ProportionalSelection.cpp  ProportionalSelection.h  RankingSelection.cpp  RankingSelection.h  SelectionStrategy.cpp  SelectionStrategy.h  TournamentSelection.cpp  TournamentSelection.h
